<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vademecum</string>
    <string name="aceptar">Aceptar</string>
    <string name="acerca_de">Acerca de..</string>
    <string name="versi_n">Versión</string>

    <!-- Acerca de.. -->
    <string name="descripcion">\tEsta aplicación nos permite acceder a la BD de la <a href="https://cima.aemps.es/cima/publico/home.html">Agencia Española del Medicamento.</a></string>
    <string name="descripcion2">\tEn la primera pantalla podemos filtrar los fármacos por su nombre o por el principio activo.\n\n\tSe puede ordenar por nombre y por laboratorio distribuidor\n\n\tHay que introducir tres letras para activar el botón de búsqueda.\n\n\tMuestra un máximo de 100 resultados por lo que hay que filtrar todo lo que se pueda.\n\n\tSe puede filtrar por el número de Principios Activos en el menú de la parte superior de la pantalla</string>
    <string name="descripcion3">\tLa pantalla de detalle nos muestra:\n\t\tNombre del fármaco.\n\t\tLaboratorio fabricante\n\t\tPrincipio activo\n\t\tTipo de receta\n\t\tSi afecta a la conducción\n\t\tProblemas de suministro\n\t\tPresentaciones\n\t\tVínculos para ficha técnica y prospecto</string>
    <string name="descripcion4">\t* Para limpiar la pantalla de búsqueda solo hay que mantener el dedo pulsado en la caja de texto.</string>
    <!-- Fin Acerca de.. -->

    <!-- Main -->
    <string name="ok">OK</string>
    <string name="p_activo">P. Activo</string>
    <string name="o_por_nombre">Nombre</string>
    <string name="o_por_laboratorio">Laboratorio</string>
    <string name="un_principio_activo">Un P. Activo</string>
    <string name="dos_principios_activos">Dos P. Activos</string>
    <string name="tres_principios_activos">Tres P. Activos</string>
    <string name="todos">Todos</string>
    <string name="n_mero_de_p_activos">Número de P. Activos</string>
    <!-- Fin Main -->

    <!-- Detalle Fármaco-->
    <string name="principios_activos">Principios Activos</string>
    <string name="laboratorio">Laboratorio</string>
    <string name="farmaco">Fármaco</string>
    <string name="nombre">Nombre</string>
    <string name="prescripcion">Prescripcion</string>
    <string name="conducci_n">Conducción</string>
    <string name="presentaciones">Presentaciones</string>
    <string name="ficha_tecnica">Ficha Tecnica completa</string>
    <string name="prospecto">Prospecto</string>
    <string name="problemas_de_suministro">Problemas de suministro</string>
    <string name="puede_afectar_cond">Puede afectar a la conducción</string>
    <string name="no_afecta_conduc">No afecta a la conducción</string>
    <string name="hay_problemas_suminstro">HAY PROBLEMAS DE SUMINISTRO</string>
    <string name="no_problemas_suministro" tools:ignore="Typos">No hay problemas de suministro en este momento</string>
    <string name="regsitro">REGISTRO</string>
    <string name="abrir_ficha_tecnica">Abrir Ficha Técnica completa…</string>
    <string name="ft_no_accesible"> \tFicha Técnica no accesible\t</string>
    <string name="abrir_prospecto">Abrir Prospecto…</string>
    <string name="salir">Salir</string>
    <string name="salir_aplicacion">No hay conexión an Internet.\nVa a salir de la aplicación.\n\nEl acceso a Intenet es necesario para conectar con la base de datos de la AEMS.</string>
    <string name="excipientes">Excipientes</string>
    <string name="indicaciones">\tIndicaciones…</string>
    <string name="posolog_a">\tPosología…</string>
    <string name="contraindicaciones">\tContraindicaciones…</string>
    <string name="interacciones">\tInteracciones…</string>
    <string name="reacciones_adversas">\tReacciones Adversas…</string>
    <string name="fertilidad">\tFertilidad, embarazo y lactancia…</string>
    <string name="proNoAccesible">\tProspecto no accesible\t</string>
    <string name="sinConexion">Sin conexión a Internet</string>
    <string name="reintentar">Reintentar</string>
    <string name="strSi">Si</string>
    <string name="strNo">No</string>
    <string name="strComprobar">Comprobar de nuevo</string>
    <string name="strDetalleFarmaco">Detalle Fármaco</string>
    <string name="hay_problemas_de_suministro">Hay problemas de suministro con esta presentación.</string>
    <string name="no_cargar_datos">No se ha podido cargar los datos</string>
    <string name="no_listado_farmacos">No se ha podido descargar el listado de los fármacos</string>
    <!-- Fin Detalle Fármaco-->


</resources>
